apps/hello-world/base/ns.yaml
#! manually added trying to change namespace
apiVersion: v1
kind: Namespace
metadata:
  name: foo
