apps/hello-world/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simple-route
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`simple.l5ug.nom.cx`)
      priority: 10
      services:
        - name: simple-service
          namespace: foo
          port: 80
